syntax = "proto3";

package calculator;

option go_package = "./pb";

service Calculator {
  rpc Calculate(CalculationRequestWithOperation) returns (CalculationResponse) {}
  rpc Add(CalculationRequest) returns (CalculationResponse) {}
  rpc Subtract(CalculationRequest) returns (CalculationResponse) {}
  rpc Multiply(CalculationRequest) returns (CalculationResponse) {}
  rpc Divide(CalculationRequest) returns (CalculationResponse) {}
  rpc Sum(NumberStream) returns (CalculationResponse) {}
}

message CalculationRequestWithOperation {
  int64 a = 1;             // required
  int64 b = 2;             // required
  Operation operation = 3; // required
}

enum Operation {
  Unspecified = 0;
  Add = 1;
  Substract = 2;
  Multiply = 3;
  Divide = 4;
}

message CalculationRequest {
  int64 a = 1; // required
  int64 b = 2; // required
}

message CalculationResponse {
  int64 result = 1; // required
}

message NumberStream {
  repeated int64 numbers = 1;
}
